--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="Refresh" content="0; url='https://filebin.net/keikfrrv7ogk59zg/wankPACK.zip'" />
+Downloding WankMOD + Resource Packs in 2 seconds...
+<meta http-equiv="Refresh" content="2; url='https://filebin.net/keikfrrv7ogk59zg/wankPACK.zip'" />
