--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-Downloding WankMOD + Resource Packs in 2 seconds...
-<meta http-equiv="Refresh" content="2; url='https://filebin.net/keikfrrv7ogk59zg/wankPACK.zip'" />
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="2; url='https://filebin.net/keikfrrv7ogk59zg/wankPACK.zip'" />
+  </head>
+  <body>
+    <p>Downloding WankMOD + Resource Packs in 2 seconds...</p>
+  </body>
+</html>
